--- a/index.html
+++ b/index.html
@@ -46,18 +46,50 @@
         </div>
       </nav>
     <div class="container bg-primary text-light p-5">
+        <h1>Este div tiene la clase container</h1>
         <h1>Hola Mundo de Bootstrap</h1>
         <p>A través de esta herramienta haremos sitios web <em>responsives</em> de forma ágil y sencilla.</p>
     </div>
-    <div class="container bg-orange">
-        <ul>
-            <li>Algo...</li>
-            <li>Algo...</li>
-            <li>Algo...</li>
-        </ul>
+    <div class="container-fluid bg-orange">
+        <h1>Este div tiene la clase container-fluid</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ut explicabo assumenda suscipit cumque sequi, molestias, porro iste vitae earum enim architecto mollitia nihil consectetur repudiandae ipsam quisquam commodi corrupti?</p>
     </div>
 
-    
+    <div class="container bg-danger">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-4 p-3 bg-warning">
+            <h1>Ingredientes necesarios</h1>
+            <ul>
+              <li>Ingrediente...</li>
+              <li>Ingrediente...</li>
+              <li>Ingrediente...</li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-8 p-3 bg-primary text-light">
+            <h1>Pasos para la cocción</h1>
+            <ol>
+              <li>Paso 1...</li>
+              <li>Paso 2...</li>
+              <li>Paso 3...</li>
+              <li>Paso 4...</li>
+            </ol>
+          </div>
+        </div>
+    </div>
+
+    <div class="container bg-danger mt-3">
+      <div class="row">
+        <div class="col-4 bg-warning">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis obcaecati eius molestiae quisquam porro commodi, similique molestias cumque. Eos doloremque dignissimos voluptatum repudiandae? Nam, quis vitae provident fuga neque nesciunt.
+        </div>
+        <div class="col-4 bg-primary text-light">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos veritatis quasi ducimus ipsam aliquid? Repellat doloremque laboriosam quisquam temporibus ex sint hic voluptate blanditiis quasi facilis recusandae, dicta sed labore.
+        </div>
+        <div class="col-2 bg-success text-light">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos veritatis quasi ducimus ipsam aliquid? Repellat doloremque laboriosam quisquam temporibus ex sint hic voluptate blanditiis quasi facilis recusandae, dicta sed labore.
+        </div>
+      </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
